2013-12-27  Carl Hetherington  <cth@carlh.net>

	* Fix non-update of video information on changing DCP resolution (#299).

	* Version 1.52 released.

2013-12-27  Carl Hetherington  <cth@carlh.net>

	* More speculative fixes for 4K.

2013-12-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.51 released.

2013-12-23  Carl Hetherington  <cth@carlh.net>

	* A couple of potential fixes for 4K.

	* Version 1.50 released.

2013-12-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.49 released.

2013-12-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.48 released.

2013-12-23  Carl Hetherington  <cth@carlh.net>

	* Add TLS/SSL support to KDM email sending.

2013-12-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.47 released.

2013-12-23  Carl Hetherington  <cth@carlh.net>

	* Add $START_TIME and $END_TIME as variables for the KDM email.

	* Add top/bottom option for 3D frames.

2013-12-20  Carl Hetherington  <cth@carlh.net>

	* Add configuration option for default audio delay (#276).

	* Version 1.46 released.

2013-12-19  Carl Hetherington  <cth@carlh.net>

	* Version 1.45 released.

2013-12-19  Carl Hetherington  <cth@carlh.net>

	* Bump libdcp version again for a crash fix for 32-bit Windows,
	and also for problems generating certificate chains.

2013-12-18  Carl Hetherington  <cth@carlh.net>

	* Version 1.44 released.

2013-12-18  Carl Hetherington  <cth@carlh.net>

	* Bump libdcp version again for a fix to XML validity for 3D.

	* Version 1.43 released.

2013-12-18  Carl Hetherington  <cth@carlh.net>

	* Update libdcp version to get fix for 3D IntrinsicDuration.

	* Fix progress reporting when making 3D DCPs.

	* Fix non-update of display when changing video frame type (2D,
	3D left/right etc.)

	* Restore video information in video tab when using still images.

	* Hopefully fix exception on new film in some strange cases.

2013-12-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.42 released.

2013-12-09  Carl Hetherington  <cth@carlh.net>
